test/files/neg/t2148.check
t2148.scala:9: error: A is not a legal prefix for a constructor
  val b = new A with A#A1
                       ^
one error found
